--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <div class="hero-img">
             <div class="hero-shadow"></div>
             <div class="hero-text">
-                <h1 data-aos="fade-up" data-aos-delay="200">Lorem ipsum dolor sit amet.</h1>
-                <p data-aos="fade-up" data-aos-delay="400">Lorem, ipsum dolor.</p>
+                <h1 data-aos="fade-up" data-aos-delay="200">Z pasji do konopi</h1>
+                <p data-aos="fade-up" data-aos-delay="400">Produkty które zmienią twoje życie na lepsze</p>
                 <a data-aos="fade-up" data-aos-delay="600" href="#aboutus" type="button" class="btn btn-outline-light">poznaj nas</a>
             </div>
             <a href="#aboutus"><i class="fa-solid fa-chevron-down bounce-top"></i></a>
@@ -56,6 +56,12 @@
             <div class="container">
                 <h2>O NAS</h2>
                 <div class="underline"></div>
+                <p>Jesteśmy firmą specjalizującą się w produkcji olejków CBD oraz ekstrakcji z konopi Cannabis sativa L. Nasza firma stawia na jakość i bezpieczeństwo swoich produktów, dlatego korzystamy wyłącznie z najlepszych surowców i najnowocześniejszych technologii. Nasze olejki CBD są w pełni naturalne i pozyskiwane z konopi, które spełniają najwyższe standardy jakościowe. Dzięki temu nasi klienci mogą mieć pewność, że kupują produkt, który nie tylko działa skutecznie, ale także jest bezpieczny dla ich zdrowia.</p>
+                <p>Jesteśmy firmą specjalizującą się w produkcji olejków CBD oraz ekstrakcji z konopi Cannabis sativa L. Nasza firma stawia na jakość i bezpieczeństwo swoich produktów, dlatego korzystamy wyłącznie z najlepszych surowców i najnowocześniejszych technologii. Nasze olejki CBD są w pełni naturalne i pozyskiwane z konopi, które spełniają najwyższe standardy jakościowe. Dzięki temu nasi klienci mogą mieć pewność, że kupują produkt, który nie tylko działa skutecznie, ale także jest bezpieczny dla ich zdrowia.</p>
+                <p>Jesteśmy firmą specjalizującą się w produkcji olejków CBD oraz ekstrakcji z konopi Cannabis sativa L. Nasza firma stawia na jakość i bezpieczeństwo swoich produktów, dlatego korzystamy wyłącznie z najlepszych surowców i najnowocześniejszych technologii. Nasze olejki CBD są w pełni naturalne i pozyskiwane z konopi, które spełniają najwyższe standardy jakościowe. Dzięki temu nasi klienci mogą mieć pewność, że kupują produkt, który nie tylko działa skutecznie, ale także jest bezpieczny dla ich zdrowia.</p>
+                <p>Jesteśmy firmą specjalizującą się w produkcji olejków CBD oraz ekstrakcji z konopi Cannabis sativa L. Nasza firma stawia na jakość i bezpieczeństwo swoich produktów, dlatego korzystamy wyłącznie z najlepszych surowców i najnowocześniejszych technologii. Nasze olejki CBD są w pełni naturalne i pozyskiwane z konopi, które spełniają najwyższe standardy jakościowe. Dzięki temu nasi klienci mogą mieć pewność, że kupują produkt, który nie tylko działa skutecznie, ale także jest bezpieczny dla ich zdrowia.</p>
+                <p>Jesteśmy firmą specjalizującą się w produkcji olejków CBD oraz ekstrakcji z konopi Cannabis sativa L. Nasza firma stawia na jakość i bezpieczeństwo swoich produktów, dlatego korzystamy wyłącznie z najlepszych surowców i najnowocześniejszych technologii. Nasze olejki CBD są w pełni naturalne i pozyskiwane z konopi, które spełniają najwyższe standardy jakościowe. Dzięki temu nasi klienci mogą mieć pewność, że kupują produkt, który nie tylko działa skutecznie, ale także jest bezpieczny dla ich zdrowia.</p>
+                <p>Jesteśmy firmą specjalizującą się w produkcji olejków CBD oraz ekstrakcji z konopi Cannabis sativa L. Nasza firma stawia na jakość i bezpieczeństwo swoich produktów, dlatego korzystamy wyłącznie z najlepszych surowców i najnowocześniejszych technologii. Nasze olejki CBD są w pełni naturalne i pozyskiwane z konopi, które spełniają najwyższe standardy jakościowe. Dzięki temu nasi klienci mogą mieć pewność, że kupują produkt, który nie tylko działa skutecznie, ale także jest bezpieczny dla ich zdrowia.</p>
                 <p>Jesteśmy firmą specjalizującą się w produkcji olejków CBD oraz ekstrakcji z konopi Cannabis sativa L. Nasza firma stawia na jakość i bezpieczeństwo swoich produktów, dlatego korzystamy wyłącznie z najlepszych surowców i najnowocześniejszych technologii. Nasze olejki CBD są w pełni naturalne i pozyskiwane z konopi, które spełniają najwyższe standardy jakościowe. Dzięki temu nasi klienci mogą mieć pewność, że kupują produkt, który nie tylko działa skutecznie, ale także jest bezpieczny dla ich zdrowia.</p>
                 
             </div>
@@ -183,27 +189,15 @@
             <div class="underline"></div>
             <div class="container">
                 <div class="row text-center contact-us">
-                    <div class="col-sm-6 col-lg-4 contact-item order-1">
-                        <h3>siedziba główna</h3>
-                        <p>ul. lorem</p>
-                        <p>30-009 Kraków</p>
-                        <p>+48 666 771 312</p>
-                        <p>trialofherbs.lab@gmail.com</p>
-                    </div>
-                    <div class="col-lg-4 order-0 order-lg-1 contact-item">
-                        <h3>social media</h3>
+                    <div class="col-sm-6 col-lg-12 contact-item order-1">
+                        <p class="number">+48 666 771 312</p>
+                        <p class="mail">trialofherbs.lab@gmail.com</p>
                         <div class="social-media">
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
                             <a href="#"><i class="fab fa-twitter"></i></a>
                             <a href="#"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-lg-4 contact-item order-1">
-                        <h3>siedziba warszawa</h3>
-                        <p>ul. lorem</p>
-                        <p>00-004</p>
-                        <p>+48 666 771 313</p>
-                        <p>trialofherbs.lab@gmail.com</p>
                     </div>
                 </div>
             </div>
