Changes to the html file

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
                     <a class="nav-link active" href="#home">Home</a>
-                    <a class="nav-link" href="#aboutus">o nas</a>
+                    <a class="nav-link" href="#aboutus">kim jesteśmy</a>
                     <a class="nav-link" href="#portfolio">portfolio</a>
-                    <a class="nav-link" href="#product">produkty</a>
+                    <a class="nav-link" href="#product">o nas</a>
                     <a class="nav-link" href="#contact">kontakt</a>
                 </div>
             </div>
@@ -43,8 +43,8 @@
         <div class="hero-img">
             <div class="hero-shadow"></div>
             <div class="hero-text">
-                <h1 data-aos="fade-up" data-aos-delay="200">Z pasji do konopi</h1>
-                <p data-aos="fade-up" data-aos-delay="400">Produkty które zmienią twoje życie na lepsze</p>
+                <h1 data-aos="fade-up" data-aos-delay="200">Z pasji do natury</h1>
+                <p data-aos="fade-up" data-aos-delay="400">Konopie, które zmienią twoje życie na lepsze</p>
                 <a data-aos="fade-up" data-aos-delay="600" href="#aboutus" type="button" class="btn btn-outline-light">poznaj nas</a>
             </div>
             <a href="#aboutus"><i class="fa-solid fa-chevron-down bounce-top"></i></a>
@@ -54,16 +54,9 @@
     <main>
         <section id="aboutus" class="aboutus bg-light py-5 text-center">
             <div class="container">
-                <h2>O NAS</h2>
+                <h2>KIM JESTEŚMY</h2>
                 <div class="underline"></div>
                 <p>Jesteśmy firmą specjalizującą się w produkcji olejków CBD oraz ekstrakcji z konopi Cannabis sativa L. Nasza firma stawia na jakość i bezpieczeństwo swoich produktów, dlatego korzystamy wyłącznie z najlepszych surowców i najnowocześniejszych technologii. Nasze olejki CBD są w pełni naturalne i pozyskiwane z konopi, które spełniają najwyższe standardy jakościowe. Dzięki temu nasi klienci mogą mieć pewność, że kupują produkt, który nie tylko działa skutecznie, ale także jest bezpieczny dla ich zdrowia.</p>
-                <p>Jesteśmy firmą specjalizującą się w produkcji olejków CBD oraz ekstrakcji z konopi Cannabis sativa L. Nasza firma stawia na jakość i bezpieczeństwo swoich produktów, dlatego korzystamy wyłącznie z najlepszych surowców i najnowocześniejszych technologii. Nasze olejki CBD są w pełni naturalne i pozyskiwane z konopi, które spełniają najwyższe standardy jakościowe. Dzięki temu nasi klienci mogą mieć pewność, że kupują produkt, który nie tylko działa skutecznie, ale także jest bezpieczny dla ich zdrowia.</p>
-                <p>Jesteśmy firmą specjalizującą się w produkcji olejków CBD oraz ekstrakcji z konopi Cannabis sativa L. Nasza firma stawia na jakość i bezpieczeństwo swoich produktów, dlatego korzystamy wyłącznie z najlepszych surowców i najnowocześniejszych technologii. Nasze olejki CBD są w pełni naturalne i pozyskiwane z konopi, które spełniają najwyższe standardy jakościowe. Dzięki temu nasi klienci mogą mieć pewność, że kupują produkt, który nie tylko działa skutecznie, ale także jest bezpieczny dla ich zdrowia.</p>
-                <p>Jesteśmy firmą specjalizującą się w produkcji olejków CBD oraz ekstrakcji z konopi Cannabis sativa L. Nasza firma stawia na jakość i bezpieczeństwo swoich produktów, dlatego korzystamy wyłącznie z najlepszych surowców i najnowocześniejszych technologii. Nasze olejki CBD są w pełni naturalne i pozyskiwane z konopi, które spełniają najwyższe standardy jakościowe. Dzięki temu nasi klienci mogą mieć pewność, że kupują produkt, który nie tylko działa skutecznie, ale także jest bezpieczny dla ich zdrowia.</p>
-                <p>Jesteśmy firmą specjalizującą się w produkcji olejków CBD oraz ekstrakcji z konopi Cannabis sativa L. Nasza firma stawia na jakość i bezpieczeństwo swoich produktów, dlatego korzystamy wyłącznie z najlepszych surowców i najnowocześniejszych technologii. Nasze olejki CBD są w pełni naturalne i pozyskiwane z konopi, które spełniają najwyższe standardy jakościowe. Dzięki temu nasi klienci mogą mieć pewność, że kupują produkt, który nie tylko działa skutecznie, ale także jest bezpieczny dla ich zdrowia.</p>
-                <p>Jesteśmy firmą specjalizującą się w produkcji olejków CBD oraz ekstrakcji z konopi Cannabis sativa L. Nasza firma stawia na jakość i bezpieczeństwo swoich produktów, dlatego korzystamy wyłącznie z najlepszych surowców i najnowocześniejszych technologii. Nasze olejki CBD są w pełni naturalne i pozyskiwane z konopi, które spełniają najwyższe standardy jakościowe. Dzięki temu nasi klienci mogą mieć pewność, że kupują produkt, który nie tylko działa skutecznie, ale także jest bezpieczny dla ich zdrowia.</p>
-                <p>Jesteśmy firmą specjalizującą się w produkcji olejków CBD oraz ekstrakcji z konopi Cannabis sativa L. Nasza firma stawia na jakość i bezpieczeństwo swoich produktów, dlatego korzystamy wyłącznie z najlepszych surowców i najnowocześniejszych technologii. Nasze olejki CBD są w pełni naturalne i pozyskiwane z konopi, które spełniają najwyższe standardy jakościowe. Dzięki temu nasi klienci mogą mieć pewność, że kupują produkt, który nie tylko działa skutecznie, ale także jest bezpieczny dla ich zdrowia.</p>
-                
             </div>
         </section>
         <section id="portfolio" class="portfolio py-5 text-center">
@@ -144,7 +137,7 @@
         </section>
         <section id="product" class="aboutus bg-light py-5 text-center">
             <div class="container">
-                <h2>PRODUKTY</h2>
+                <h2>O NAS</h2>
                 <div class="underline"></div>
 
                 <div class="row">
@@ -175,7 +168,23 @@
                     </div>
                     <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="600">
                         <p><i class="fa-solid fa-atom"></i></p>
-                        <p class="aboutus-card-title">ekstrakcja nadkrytycznym CO2</p>
+                        <p class="aboutus-card-title">ekstrakcja nadkrytycznym CO<sub>2</sub></p>
+                        <p class="aboutus-card-text">Korzystamy z maszyny firmy Supercritical Fluid Technologies, INC.
+                        </p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="400">
+                        <p><i class="fa-solid fa-dna"></i></p>
+                        <p class="aboutus-card-title">GMO free</p>
+                        <p class="aboutus-card-text">Produkty wytworzone bez wykorzystania GMO</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="500">
+                        <p><i class="fa-solid fa-candy-cane"></i></i></p>
+                        <p class="aboutus-card-title">Żelki z CBD</p>
+                        <p class="aboutus-card-text">Funkcjonalne suplementy</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="600">
+                        <p><i class="fa-solid fa-leaf"></i></p>
+                        <p class="aboutus-card-title">ekstrakcja nadkrytycznym CO<sub>2</sub></p>
                         <p class="aboutus-card-text">Korzystamy z maszyny firmy Supercritical Fluid Technologies, INC.
                         </p>
                     </div>
@@ -190,11 +199,10 @@
             <div class="container">
                 <div class="row text-center contact-us">
                     <div class="col-sm-6 col-lg-12 contact-item order-1">
-                        <p class="number">+48 666 771 312</p>
-                        <p class="mail">trialofherbs.lab@gmail.com</p>
+                        <a class="number" href="tel:+48 666 771 312">+48 666 771 312</a>
+                        <a class="mail" href="mail:kontakt@cdc-lab.pl">kontakt@cdc-lab.pl</a>
                         <div class="social-media">
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
                             <a href="#"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
