--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CDC-Labs</title>
+    <title>CDC-Lab</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
 
     <nav id="navbar" class="navbar navbar-expand-lg position-fixed top-0 w-100 py-3">
         <div class="container">
-            <a class="navbar-brand" href="#"><i class="fas fa-cannabis"></i>CDC Labs</a>
+            <a class="navbar-brand" href="#"><i class="fas fa-cannabis"></i>CDC-Lab</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
@@ -32,7 +32,7 @@
                     <a class="nav-link active" href="#home">Home</a>
                     <a class="nav-link" href="#aboutus">kim jesteśmy</a>
                     <a class="nav-link" href="#portfolio">portfolio</a>
-                    <a class="nav-link" href="#product">o nas</a>
+                    <a class="nav-link" href="#product">nasze produkty</a>
                     <a class="nav-link" href="#contact">kontakt</a>
                 </div>
             </div>
@@ -45,7 +45,8 @@
             <div class="hero-text">
                 <h1 data-aos="fade-up" data-aos-delay="200">Z pasji do natury</h1>
                 <p data-aos="fade-up" data-aos-delay="400">Konopie, które zmienią twoje życie na lepsze</p>
-                <a data-aos="fade-up" data-aos-delay="600" href="#aboutus" type="button" class="btn btn-outline-light">poznaj nas</a>
+                <a data-aos="fade-up" data-aos-delay="600" href="#aboutus" type="button"
+                    class="btn btn-outline-light">poznaj nas</a>
             </div>
             <a href="#aboutus"><i class="fa-solid fa-chevron-down bounce-top"></i></a>
         </div>
@@ -56,7 +57,23 @@
             <div class="container">
                 <h2>KIM JESTEŚMY</h2>
                 <div class="underline"></div>
-                <p>Jesteśmy firmą specjalizującą się w produkcji olejków CBD oraz ekstrakcji z konopi Cannabis sativa L. Nasza firma stawia na jakość i bezpieczeństwo swoich produktów, dlatego korzystamy wyłącznie z najlepszych surowców i najnowocześniejszych technologii. Nasze olejki CBD są w pełni naturalne i pozyskiwane z konopi, które spełniają najwyższe standardy jakościowe. Dzięki temu nasi klienci mogą mieć pewność, że kupują produkt, który nie tylko działa skutecznie, ale także jest bezpieczny dla ich zdrowia.</p>
+                <p> Witaj w naszej firmie, specjalizującej się w uprawie konopi włóknistych na terenie województwa
+                    małopolskiego. U nas masz okazję zobaczyć, jak rosną konopie, które później przetwarzamy w nasze
+                    produkty.Jesteśmy dumni z naszych upraw, ponieważ konopie, które uprawiamy, są wolne od GMO oraz pestycydów,
+                    takich jak glifosat. Uprawiamy konopie na susz oraz na nasiona, a po zbiorach susz jest wysyłany do
+                    badań, aby potwierdzić jego jakość.</p>
+                    <p>Dzięki naszemu zamkniętemu systemowi produkcji mamy pełen wgląd w każdy proces, od pestki po gotowy
+                    produkt. Dzięki temu możemy zapewnić naszym klientom, że nasze produkty są wysokiej jakości i
+                    bezpieczne do spożycia.Z naszego suszu produkujemy ekstrakty CBD, z których tworzymy olejki CBD. Korzystamy z maszyny do
+                    ekstrakcji nadkrytycznym CO<sub>2</sub>, co gwarantuje powtarzalność i wysoką jakość naszych produktów.</p>
+
+                <p>Dla naszych klientów przygotowujemy również olejki o różnych stężeniach kannabinoidów oraz innych
+                    dodatkach, takich jak witaminy i terpeny. Mamy także w ofercie oleje dla zwierząt oraz żelki CBD.
+                </p>
+
+                <p>Jesteśmy przekonani, że nasze produkty sprostają wymaganiom nawet najbardziej wymagających klientów.
+                    Zapraszamy do odwiedzenia naszej strony internetowej, gdzie znajdziesz więcej informacji o naszej
+                    ofercie i o tym, jak możemy Ci pomóc.</p>
             </div>
         </section>
         <section id="portfolio" class="portfolio py-5 text-center">
@@ -137,56 +154,64 @@
         </section>
         <section id="product" class="aboutus bg-light py-5 text-center">
             <div class="container">
-                <h2>O NAS</h2>
+                <h2>NASZE PRODUKTY</h2>
                 <div class="underline"></div>
 
                 <div class="row">
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover aboutus-square" data-aos="zoom-in"
+                        data-aos-delay="100">
                         <p><i class="fa-solid fa-droplet"></i></p>
                         <p class="aboutus-card-title">oleje cbd full spectrum</p>
                         <p class="aboutus-card-text">Wykonane z najwyższą jakościa, potwierdzoną badaniami!</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="200">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover aboutus-square" data-aos="zoom-in"
+                        data-aos-delay="200">
                         <p><i class="fa-solid fa-person-running"></i></p>
                         <p class="aboutus-card-title">oleje cbd dla sportowców</p>
                         <p class="aboutus-card-text">Wykonane z izolatów CBD</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="300">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover aboutus-square" data-aos="zoom-in"
+                        data-aos-delay="300">
                         <p><i class="fa-solid fa-paw"></i></p>
                         <p class="aboutus-card-title">oleje cbd dla zwierząt</p>
                         <p class="aboutus-card-text">Mieszane z olejem z łososia.</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="400">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover aboutus-square" data-aos="zoom-in"
+                        data-aos-delay="400">
                         <p><i class="fa-solid fa-lightbulb"></i></p>
                         <p class="aboutus-card-title">susz konopny</p>
                         <p class="aboutus-card-text">Z własnej organicznej uprawy outdoor oraz indoor!</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="500">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover aboutus-square" data-aos="zoom-in"
+                        data-aos-delay="500">
                         <p><i class="fa-solid fa-seedling"></i></i></p>
                         <p class="aboutus-card-title">nasiona konopi</p>
                         <p class="aboutus-card-text">Staranna selekcja po zbiorze!</p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="600">
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover aboutus-square" data-aos="zoom-in"
+                        data-aos-delay="500">
+                        <p><i class="fa-solid fa-candy-cane"></i></i></p>
+                        <p class="aboutus-card-title">Żelki z CBD</p>
+                        <p class="aboutus-card-text">Funkcjonalne suplementy</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover aboutus-square" data-aos="zoom-in"
+                        data-aos-delay="400">
+                        <p><i class="fa-solid fa-dna"></i></p>
+                        <p class="aboutus-card-title">GMO free</p>
+                        <p class="aboutus-card-text">Produkty wytworzone bez wykorzystania GMO</p>
+                    </div>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover aboutus-square" data-aos="zoom-in"
+                        data-aos-delay="600">
                         <p><i class="fa-solid fa-atom"></i></p>
                         <p class="aboutus-card-title">ekstrakcja nadkrytycznym CO<sub>2</sub></p>
                         <p class="aboutus-card-text">Korzystamy z maszyny firmy Supercritical Fluid Technologies, INC.
                         </p>
                     </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="400">
-                        <p><i class="fa-solid fa-dna"></i></p>
-                        <p class="aboutus-card-title">GMO free</p>
-                        <p class="aboutus-card-text">Produkty wytworzone bez wykorzystania GMO</p>
-                    </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="500">
-                        <p><i class="fa-solid fa-candy-cane"></i></i></p>
-                        <p class="aboutus-card-title">Żelki z CBD</p>
-                        <p class="aboutus-card-text">Funkcjonalne suplementy</p>
-                    </div>
-                    <div class="col-sm-6 col-md-4 text-center aboutus-hover" data-aos="zoom-in" data-aos-delay="600">
-                        <p><i class="fa-solid fa-leaf"></i></p>
-                        <p class="aboutus-card-title">ekstrakcja nadkrytycznym CO<sub>2</sub></p>
-                        <p class="aboutus-card-text">Korzystamy z maszyny firmy Supercritical Fluid Technologies, INC.
-                        </p>
+                    <div class="col-sm-6 col-md-4 text-center aboutus-hover aboutus-square" data-aos="zoom-in"
+                        data-aos-delay="600">
+                        <p><i class="fa-solid fa-vial-circle-check"></i></p>
+                        <p class="aboutus-card-title">Labolatory tested</sub></p>
+                        <p class="aboutus-card-text">Wszystkie produkty testowane są w niezależnych laboratoriach.</p>
                     </div>
                 </div>
             </div>
@@ -198,22 +223,24 @@
             <div class="underline"></div>
             <div class="container">
                 <div class="row text-center contact-us">
-                    <div class="col-sm-6 col-lg-12 contact-item order-1">
-                        <a class="number" href="tel:+48 666 771 312">+48 666 771 312</a>
-                        <a class="mail" href="mail:kontakt@cdc-lab.pl">kontakt@cdc-lab.pl</a>
+                    <div class="col-sm-12 col-lg-12 contact-item order-1">
+                        <p>ul. Iwona Odrowąża 26</p>
+                        <p>30-009 Kraków</p>
+                        <p> <a class="number" href="tel:+48 666 771 312">+48 666 771 312</a></p>
+                        <p> <a href="mailto:kontakt@cdc-lab.pl">kontakt@cdc-lab.pl</a></p>
                         <div class="social-media">
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
                             <a href="#"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
-                    </div>
                 </div>
+            </div>
             </div>
             <div class="contact-shadow"></div>
         </section>
     </main>
     <footer class="bg-dark text-light py-4 text-center">
-        <p>CDC-LABS. &copy; 2023. All Rights Reserved</p>
+        <p>CDC-LAB. &copy; 2023. All Rights Reserved</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
