First fixes rwd

--- a/index.html
+++ b/index.html
@@ -57,23 +57,32 @@
             <div class="container">
                 <h2>KIM JESTEŚMY</h2>
                 <div class="underline"></div>
-                <p> Witaj w naszej firmie, specjalizującej się w uprawie konopi włóknistych na terenie województwa
-                    małopolskiego. U nas masz okazję zobaczyć, jak rosną konopie, które później przetwarzamy w nasze
-                    produkty.Jesteśmy dumni z naszych upraw, ponieważ konopie, które uprawiamy, są wolne od GMO oraz pestycydów,
-                    takich jak glifosat. Uprawiamy konopie na susz oraz na nasiona, a po zbiorach susz jest wysyłany do
-                    badań, aby potwierdzić jego jakość.</p>
-                    <p>Dzięki naszemu zamkniętemu systemowi produkcji mamy pełen wgląd w każdy proces, od pestki po gotowy
-                    produkt. Dzięki temu możemy zapewnić naszym klientom, że nasze produkty są wysokiej jakości i
-                    bezpieczne do spożycia.Z naszego suszu produkujemy ekstrakty CBD, z których tworzymy olejki CBD. Korzystamy z maszyny do
-                    ekstrakcji nadkrytycznym CO<sub>2</sub>, co gwarantuje powtarzalność i wysoką jakość naszych produktów.</p>
-
-                <p>Dla naszych klientów przygotowujemy również olejki o różnych stężeniach kannabinoidów oraz innych
-                    dodatkach, takich jak witaminy i terpeny. Mamy także w ofercie oleje dla zwierząt oraz żelki CBD.
+                <p>Jesteśmy firmą specjalizującą się w ekstrakcji konopi
+                    Cannabis Sativa L metodą CO<sub>2</sub> oraz produkcji olejków CBD. CDC-Lab powstała z pasji do
+                    konopi i chęci dostarczenia na rynek
+                    produktów najwyższej jakości, które będą skuteczne i bezpieczne dla naszych klientów.</p>
+                <p>Olejki CBD są wytwarzane z surowców pochodzących wyłącznie z polskich certyfikowanych upraw bez
+                    GMO i pestycydów. Stawiamy na naturalność i wysoką jakość naszych produktów, dlatego dbamy o to, aby
+                    surowce były starannie wyselekcjonowane i przetwarzane w najnowocześniejszych technologiach. Dzięki
+                    temu nasi klienci mogą mieć pewność, że kupują produkt, który nie tylko działa skutecznie, ale także
+                    jest bezpieczny dla ich zdrowia.</p>
+                <p>Posiadamy uprawy konopi włóknistej znajdującej się na terenie Małpolski, dzięki czemu na bierząco
+                    możemy badać stan naszych upraw. Stosujemy wyłącznie naturalne metody uprawy, a każdy etap procesu
+                    produkcji jest starannie kontrolowany.
                 </p>
-
-                <p>Jesteśmy przekonani, że nasze produkty sprostają wymaganiom nawet najbardziej wymagających klientów.
-                    Zapraszamy do odwiedzenia naszej strony internetowej, gdzie znajdziesz więcej informacji o naszej
-                    ofercie i o tym, jak możemy Ci pomóc.</p>
+                <p>W produkcji stosujemy technologię ekstrakcji nadkrytycznym CO<sub>2</sub>, która umożliwia nam
+                    pozyskanie najwyższej jakości ekstraktów z konopi. Metoda ta pozwala nam na selektywny ekstrakt, co
+                    oznacza, że w ekstrakcie CBD znajdują się jedynie te związki, które są najbardziej korzystne dla
+                    zdrowia naszych klientów. Ponadto, technologia ta jest ekologiczna i przyjazna dla środowiska, co
+                    jest dla nas bardzo ważne.</p>
+                <p>Nasze produkty spełniają wszelkie normy i restrykcje, oraz są starannie testowany przed
+                    wprowadzeniem na rynek. Dzięki temu nasi klienci mogą mieć pewność, że kupują produkt, który jest
+                    bezpieczny i skuteczny.
+                </p>
+                <p>Jesteśmy dumni z tego, że nasze produkty pomagają naszym klientom w poprawie zdrowia i samopoczucia.
+                    CDC-Lab stawia na jakość i bezpieczeństwo swoich produktów, a także na rzetelną obsługę klienta.
+                    Jesteśmy otwarci na współpracę z firmami, które podzielają naszą pasję i chęć dostarczania na rynek
+                    produktów najwyższej jakości.</p>
             </div>
         </section>
         <section id="portfolio" class="portfolio py-5 text-center">
