fix rwd to phone

--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
         </section>
 
         <section id="contact" class="contact py-5 text-center">
-            <h2>Kontakt</h2>
-            <div class="underline"></div>
+            <h2 class="cnt1">Kontakt</h2>
+            <div class="underline cnt"></div>
             <div class="container">
                 <div class="row text-center contact-us">
                     <div class="col-sm-12 col-lg-12 contact-item order-1">
