Add intagram account

--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
                     <div class="col-sm-12 col-lg-12 contact-item order-1">
                         <p>ul. Iwona Odrowąża 26</p>
                         <p>30-009 Kraków</p>
-                        <p> <a class="number" href="tel:+48 666 771 312">+48 666 771 312</a></p>
+                        <p> <a class="number" href="tel:+48 666 771 312">+48 881 099 862</a></p>
                         <p> <a href="mailto:kontakt@cdc-lab.pl">kontakt@cdc-lab.pl</a></p>
                         <div class="social-media">
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://www.instagram.com/cdc_lab/"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
