--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                         <p> <a href="mailto:kontakt@cdc-lab.pl">kontakt@cdc-lab.pl</a></p>
                         <div class="social-media">
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="https://www.instagram.com/cdc_lab/"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://www.instagram.com/cdc_lab/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
